# furry-tracer

./: .gitignore  Cargo.toml  README.md  run_jsons.sh
src/: camera.rs  dataforms.rs  geo_cache.rs  geometry.rs  geometry_processing.rs  image.rs  interval.rs  json_parser.rs  lights.rs  main.rs  material.rs  numeric.rs  ray.rs  renderer.rs  scene.rs  shapes.rs
