[package]
name = "furry-tracer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "raytracer"
path = "src/main.rs"


[dependencies]
bevy_math = {version = "0.17.1", features = ["serialize"]}
png = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

